--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,15 @@
+[fmt]
+line_length = 120
+tab_width = 2
+bracket_spacing = false
+int_types = 'long'
+multiline_func_header = 'params_first'
+quote_style = 'single'
+number_underscore = 'thousands'
+wrap_comments = false
+
 [profile.default]
+auto_detect_solc = true
 src = "src"
 out = "out"
 libs = ["lib"]
-
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
